<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16dp">

    <ImageView
        android:id="@+id/itemImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        android:contentDescription="@string/product_image" />

    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemImage"
        android:layout_marginTop="@dimen/_16dp"
        android:textSize="@dimen/_24sp"
        android:textStyle="bold"
        android:text="@string/item_name"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/itemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemName"
        android:layout_marginTop="@dimen/_8dp"
        android:textSize="@dimen/_20sp"
        android:text="@string/item_description"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/itemPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/itemDescription"
        android:layout_marginTop="@dimen/_8dp"
        android:textSize="@dimen/_20sp"
        android:textStyle="bold"
        android:text="@string/item_price"
        android:textColor="@android:color/black" />

</RelativeLayout>
