<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_5dp"
    tools:context=".PaymentOptionsActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSelectPaymentMethod"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_select_payment_method"
        android:textSize="@dimen/_24sp"
        android:padding="@dimen/_12dp"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupPaymentOptions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvSelectPaymentMethod"
        android:padding="@dimen/_40dp">

        <RadioButton
            android:id="@+id/radioButtonCashOnDelivery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_cash_on_delivery"
            android:textSize="@dimen/_20sp"
            android:padding="@dimen/_35dp"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/radiobtn_background"
            android:paddingVertical="@dimen/_8dp" />

        <RadioButton
            android:id="@+id/radioButtonInternetBanking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_internet_banking"
            android:textSize="@dimen/_20sp"
            android:padding="@dimen/_35dp"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/radiobtn_background"
            android:paddingVertical="@dimen/_8dp" />

        <RadioButton
            android:id="@+id/radioButtonDebitCreditCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_debit_credit_card"
            android:textSize="@dimen/_20sp"
            android:padding="@dimen/_35dp"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/radiobtn_background"
            android:paddingVertical="@dimen/_8dp" />

        <RadioButton
            android:id="@+id/radioButtonPayPal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_paypal"
            android:textSize="@dimen/_20sp"
            android:padding="@dimen/_35dp"
            android:layout_marginTop="@dimen/_20dp"
            android:background="@drawable/radiobtn_background"
            android:paddingVertical="@dimen/_8dp" />
    </RadioGroup>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_next"
        android:textColor="@android:color/white"
        android:background="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/radioGroupPaymentOptions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
