<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_16dp"
    tools:context=".authentication.RegisterUser">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#00A4FD"
        android:elevation="@dimen/_4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/title_register" />

    <TextView
        android:id="@+id/tv_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hint_full_name"
        android:layout_marginHorizontal="@dimen/_8dp"
        app:layout_constraintTop_toBottomOf="@id/tb_register"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_32dp" />

    <EditText
        android:id="@+id/et_full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:background="@drawable/rounded_edittext"
        android:layout_marginHorizontal="@dimen/_8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_full_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_12dp" />

    <TextView
        android:id="@+id/tv_mobile_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hint_mobile_no"
        android:layout_marginHorizontal="@dimen/_8dp"
        app:layout_constraintTop_toBottomOf="@id/et_full_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_20dp" />

    <EditText
        android:id="@+id/et_mobile_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:background="@drawable/rounded_edittext"
        android:layout_marginHorizontal="@dimen/_8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_mobile_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_12dp" />

    <TextView
        android:id="@+id/tv_email_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hint_email_id"
        android:layout_marginHorizontal="@dimen/_8dp"
        app:layout_constraintTop_toBottomOf="@id/et_mobile_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_20dp" />

    <EditText
        android:id="@+id/et_email_id"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edittext"
        android:layout_marginHorizontal="@dimen/_8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_email_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_12dp" />

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hint_password"
        android:layout_marginHorizontal="@dimen/_8dp"
        app:layout_constraintTop_toBottomOf="@id/et_email_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_20dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext"
        android:layout_marginHorizontal="@dimen/_8dp"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_12dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_register"
        android:paddingLeft="@dimen/_20dp"
        android:paddingRight="@dimen/_20dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_background"
        android:textSize="@dimen/_12sp"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_32dp" />

    <TextView
        android:id="@+id/tv_have_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_have_account"
        android:textSize="@dimen/_16sp"
        android:textStyle="bold"
        android:textColor="@color/orange"

        android:layout_marginBottom="@dimen/_12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
