<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/_10dp"
    android:layout_marginTop="@dimen/_12dp"
    app:cardCornerRadius="@dimen/_8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_8dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/vertical_guideline"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.30" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/img_4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/vertical_guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvItemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textSize="@dimen/_32sp"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintTop_toTopOf="parent"
            android:padding="@dimen/_8dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvItemUnitPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit_price"
            android:textSize="@dimen/_24sp"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintTop_toBottomOf="@id/tvItemName"
            android:padding="@dimen/_8dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvItemQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textSize="@dimen/_24sp"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintTop_toBottomOf="@id/tvItemUnitPrice"
            android:padding="@dimen/_8dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvItemAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            android:textSize="@dimen/_24sp"
            app:layout_constraintStart_toEndOf="@id/vertical_guideline"
            app:layout_constraintTop_toBottomOf="@id/tvItemQuantity"
            android:padding="@dimen/_8dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
