<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_8dp"
    android:layout_margin="@dimen/_5dp"
    >

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDeliveryAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_delivery_address"
        android:textSize="@dimen/_20sp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/addressRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDeliveryAddress" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnAddAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:background="@drawable/btn_background"
        android:padding="@dimen/_8dp"
        android:text="@string/add_address"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_8dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:background="@drawable/btn_background"
        android:padding="@dimen/_8dp"
        android:text="@string/next"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAddAddress" />

</androidx.constraintlayout.widget.ConstraintLayout>
