<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/_16dp"
    android:layout_margin="@dimen/_8dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="@dimen/_8dp"
    app:cardElevation="@dimen/_4dp"
    android:background="#CEC6DC">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline75"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline25"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgProduct"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:layout_marginBottom="@dimen/_8dp"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="Product Image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:scaleType="centerCrop" />

        <TextView
            android:id="@+id/txtProductName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-condensed"
            android:gravity="start"
            android:maxLines="1"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sp"
            android:padding="@dimen/_8dp"
            android:textStyle="bold"
            android:layout_marginLeft="@dimen/_5dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline75"
            app:layout_constraintStart_toEndOf="@+id/imgProduct"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/product_name_hint" />

        <TextView
            android:id="@+id/txtProductDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-condensed"
            android:maxLines="2"
            android:padding="@dimen/_8dp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sp"
            android:layout_marginLeft="@dimen/_5dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline75"
            app:layout_constraintStart_toEndOf="@+id/imgProduct"
            app:layout_constraintTop_toBottomOf="@+id/txtProductName"
            tools:text="@string/product_description_hint" />

        <TextView
            android:id="@+id/txtProductPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:padding="@dimen/_8dp"
            android:fontFamily="sans-serif-condensed"
            android:maxLines="1"
            android:textColor="#FE8F52"
            android:layout_marginLeft="@dimen/_5dp"
            android:textSize="@dimen/_12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/guideline75"
            app:layout_constraintStart_toEndOf="@+id/imgProduct"
            app:layout_constraintTop_toBottomOf="@+id/txtProductDescription"
            tools:text="@string/product_price_hint" />

        <TextView
            android:id="@+id/txtTotalPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:maxLines="1"
            android:textColor="#FE8F52"
            android:layout_marginLeft="@dimen/_5dp"
            android:textSize="@dimen/_20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/guideline75"
            app:layout_constraintBottom_toTopOf="@id/btnMinus"
            tools:text="@string/product_price_hint" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnMinus"
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"
            android:text="-"
            android:background="@drawable/btn_background"
            android:textSize="@dimen/_20sp"
            app:layout_constraintEnd_toStartOf="@+id/etQuantity"
            app:layout_constraintTop_toBottomOf="@+id/txtProductDescription" />

        <EditText
            android:id="@+id/etQuantity"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:text="1"
            android:textColor="#FE8F52"
            android:textSize="@dimen/_20sp"
            android:gravity="center"
            android:maxLength="3"
            app:layout_constraintEnd_toStartOf="@+id/btnPlus"
            app:layout_constraintTop_toBottomOf="@+id/txtProductDescription"
            app:layout_constraintBottom_toBottomOf="@+id/txtProductPrice" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnPlus"
            android:layout_width="@dimen/_30dp"
            android:layout_height="@dimen/_30dp"
            android:text="+"
            android:background="@drawable/btn_background"
            android:textSize="@dimen/_20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtProductDescription" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
